hphp/hack/test/typecheck/anon17.php.like_types.exp
File "anon17.php", line 8, characters 24-29:
Invalid argument (Typing[4110])
File "anon17.php", line 3, characters 31-58:
Expected ~Vector<(function(): string)> because it is an unenforceable type
File "anon17.php", line 6, characters 12-53:
But got Vector<[unresolved]>
